fixing overflow issue

--- a/style.css
+++ b/style.css
@@ -51,6 +51,8 @@ body {
   line-height: 70px;
   text-align: right;
   font-size: 2rem;
+
+  overflow: hidden;
 }
 
 #keypad {
